Added example with Redis, `--volumes-from`, `-v` etc.

--- a/cheat_sheet_docker.tex
+++ b/cheat_sheet_docker.tex
@@ -22,6 +22,12 @@
 
 \section{Общие сведения о системе Docker}
 
+\subsection{Термины и определения}
+
+\paragraph{{localhost}} (так называемый, <<локальный хост>>, по смыслу <<этот компьютер>>) -- стандартное, официально зарезервированное доменное имя для \emph{частых} (или что то же самое \emph{локальных}) IP-адресов\footnote{Уникальный сетевой адрес узла в компьютерной сети, построенной на базе стека протоколов TCP/IP} \emph{петлевого интерфейса}\footnote{Обычно используется термин \emph{loopback}, который описывает методы или процедуры маршрутизации электронных сигналов, цифровых потоков данных, или других движущихся сущностей от их источника и обратно к тому же источнику без специальной обработки или модификации} (диапазон \texttt{127.0.0.1} -- \texttt{127.255.255.255}). Использование IP-адреса \texttt{127.0.0.1} позволяет устанавливать соединение и передавать информацию для программ-серверов, работающих на том же компьютере, что и программа-клиент. Примером может быть запущенный на компьютере веб-сервер приложений, обращение к которому выполняется с этого же компьютера для веб-разработки на данном компьютере без необходимости выкладывать веб-программу в сеть Интернет, пока ее разработка не закончена. Традиционно IP-адресу \texttt{127.0.0.1} однозначно сопоставляется имя хоста \texttt{localhost}.
+
+\paragraph{{порт}} целое неотрицательное число, записываемое в заголовках \emph{протоколов транспортного уровня} модели OSI (TCP, UDP, SCTP, DCCP). Используется для определения процесса-получателя пакета в пределах одного хоста (локального компьютера).
+
 \subsection{Установка}
 
 Установить \texttt{Docker} можно с помощью менеджера пакетов \texttt{conda}
@@ -609,13 +615,6 @@ RUN curl -SL "https://${MONGO_VERSION}.tgz" -o mongo.tgz \
     && rm mongo.tgz*
 \end{lstlisting}
 
-\section{Общие сведения о компьютерных сетях}
-
-\subsection{Термины и определения}
-
-\paragraph{{localhost}} (так называемый, <<локальный хост>>, по смыслу <<этот компьютер>>) -- стандартное, официально зарезервированное доменное имя для \emph{частых} (или что то же самое \emph{локальных}) IP-адресов\footnote{Уникальный сетевой адрес узла в компьютерной сети, построенной на базе стека протоколов TCP/IP} \emph{петлевого интерфейса}\footnote{Обычно используется термин \emph{loopback}, который описывает методы или процедуры маршрутизации электронных сигналов, цифровых потоков данных, или других движущихся сущностей от их источника и обратно к тому же источнику без специальной обработки или модификации} (диапазон \texttt{127.0.0.1} -- \texttt{127.255.255.255}). Использование IP-адреса \texttt{127.0.0.1} позволяет устанавливать соединение и передавать информацию для программ-серверов, работающих на том же компьютере, что и программа-клиент. Примером может быть запущенный на компьютере веб-сервер приложений, обращение к которому выполняется с этого же компьютера для веб-разработки на данном компьютере без необходимости выкладывать веб-программу в сеть Интернет, пока ее разработка не закончена. Традиционно IP-адресу \texttt{127.0.0.1} однозначно сопоставляется имя хоста \texttt{localhost}.
-
-\paragraph{{порт}} целое неотрицательное число, записываемое в заголовках \emph{протоколов транспортного уровня} модели OSI (TCP, UDP, SCTP, DCCP). Используется для определения процесса-получателя пакета в пределах одного хоста (локального компьютера).
 
 \section{Базовые концепции, связанные с системой Docker}
 
@@ -820,6 +819,104 @@ dnmonster:
 
 redis:
     image: redis:alpine3.12
+\end{lstlisting}
+
+\section{Пример работы с базой данных Redis}
+
+Redis -- \emph{резидентная} система управления базами данных\footnote{Организованная в оперативной памяти} класса NoSQL, работающая со структурами данных типа <<ключ-значение>>.
+
+Рассмотрим пример взаимодействия с СУБД Redis на базе концепции Docker-контейнеров. Для начала скачаем образ Redis
+\begin{lstlisting}[
+style = bash,
+numbers = none
+]
+$ docker pull redis
+$ docker images
+# выведет
+REPOSITORY          TAG                 IMAGE ID            CREATED             SIZE
+redis               latest              36304d3b4540        9 days ago          104MB
+\end{lstlisting}
+
+Для того чтобы подготовить <<основу>> для работы с СУБД Redis, запустим контейнер на базе образа Redis в фоновом режиме и присвоим этому образу имя <<myredis>>
+\begin{lstlisting}[
+style = bash,
+numbers = none
+]
+$ docker run -d --name myredis redis
+$ docker ps -a  # 0671bf41b781180da2c6341875fae93d484f8df3f54bb25569220f83936fd032
+# выведет
+CONTAINER ID  IMAGE  STATUS       ... PORTS     NAMES
+0671bf41b781  redis  Up 3 seconds ... 6379/tcp  myredis
+\end{lstlisting}
+
+Теперь для того чтобы получить доступ к контейнеру \texttt{myredis} нужно создать новый временный контейнер (контейнер, который будет уничтожен после завершения его процесса\footnote{Контейнер существует пока существует его основной процесс \cite{mouat:docker-2017}}), который будет выступать в роли интерфейса к СУБД Redis. С помощью этого контейнера мы сможем записать данные в базу, ассоциированную с контейнером \texttt{myredis}
+\begin{lstlisting}[
+numbers = none
+]
+# обязательно нужно указать /bin/bash
+$ docker run -it --rm --link myredis:redis /bin/bash
+root@5cab704887ff:/data# redis-cli -h redis -p 6379
+redis:6379> set "Ansys" "MAPDL"  # OK
+redis:6379> set "Nastran" "Python"  # OK
+...
+redis:6379> save  # OK
+redis:6379> exit
+root@5cab704887ff:/data# exit
+\end{lstlisting}
+
+Здесь: флаг \verb|-it| означает создать интерактивный сеанс работы на подключаемом терминальном устройстве; ключ \verb|--rm| означает удалить контейнер как только завершиться его процесс; ключ \verb|--link myredis:redis| означает создать связь между текущим контейнером и контейнером с именем \texttt{myredis} (\texttt{redis} -- это просто псевдоним, через который можно обращаться к контейнеру \texttt{myredis} из-под текущего контейнера).
+
+С помощью терминального клиента \texttt{redis-cli} подключаемся к СУБД Redis, указывая хост и порт, и создаем несколько пар <<ключ-значение>>. Затем сохраняет наработки и завершаем сеанс.
+
+Остается только перенести базу данных из контейнера на локальную машину. Для этого запускаем еще один контейнер. Теперь на базе образа какой-нибудь UNIX-подобной операционной системы, например, Ubuntu и копируем файл базы данных \texttt{dump.rdb} в каталог файловой системы хоста \texttt{backup\_host}
+\begin{lstlisting}[
+style = bash,
+numbers = none
+]
+$ docker run -it --rm --volumes-from myredis -v $(pwd)/backup_host:/backup_cont ubuntu
+\end{lstlisting}
+
+В контейнере будет создан каталог \texttt{backup\_cont}, который связан с каталогом файловой системы хоста \texttt{backup\_host}. Говорят, что каталог \texttt{backup\_host} файловой системы хоста смонтирован на каталог \texttt{backup\_cont} внутри контейнера. Файлы, который попадают в каталог \texttt{backup\_cont} внутри контейнера оказываются в каталоге \texttt{backup\_host}. Ключ \verb|--volumes-from| позволяет получить доступ к каталогу базы данных Redis.
+
+Если теперь вывести содержание корневой директории контейнера, то среди прочих каталогов и файлов мы увидим каталог \texttt{data} и \texttt{backup\_cont}
+\begin{lstlisting}[
+numbers = none
+]
+root@3cc5e757c42f:/# ls -l
+# выведет
+total 52
+drwxr-xr-x   2 root root   80 Jun  7 20:18 backup_cont
+lrwxrwxrwx   1 root root    7 Apr 23 11:06 bin -> usr/bin
+drwxr-xr-x   2 root root 4096 Apr 15 11:09 boot
+drwxr-xr-x   2  999  999 4096 Jun  7 22:42 data
+drwxr-xr-x   5 root root  360 Jun  7 22:54 dev
+drwxr-xr-x   1 root root 4096 Jun  7 22:54 etc
+drwxr-xr-x   2 root root 4096 Apr 15 11:09 home
+...
+\end{lstlisting}
+
+Скопируем файл базы данных в \texttt{backup\_cont}
+\begin{lstlisting}[
+numbers = none
+]
+root@3cc5e757c42f:/# cp -ip data/dump.rdb backup_cont/
+\end{lstlisting}
+
+После копирования этот файл можно будет найти в каталоге \texttt{backup\_host}. Когда работа с контейнером Redis будет закончена, его можно остановить и удалить
+\begin{lstlisting}[
+style = bash,
+numbers = none
+]
+$ docker stop myredis
+$ docker rm -v myredis  # `-v` означает удалить контейнер вместе с томами
+\end{lstlisting}
+
+Вспомогательные контейнеры можно удалить с помощью команды
+\begin{lstlisting}[
+style = bash,
+numbers = none
+]
+$ docker rm $(docker ps -aq)
 \end{lstlisting}
 
 
