Added some useful notes about docker's conpets

--- a/cheat_sheet_docker.tex
+++ b/cheat_sheet_docker.tex
@@ -24,9 +24,164 @@
 
 \subsection{Термины и определения}
 
+\paragraph{Контейнер} -- это НЕ виртуальная машина, а \emph{приложение  и его зависимости}, упакованные в стандартизированное, изолированное, легковесное окружение. Контейнеры используют виртуализацию на уровне ядра операционной системы и не содержат своей собственной операционной системы, поэтому они такие легкие.
+
+\paragraph{Образ} -- неизменяемая сущность, снимок контейнера. Образ состоит из слоев.
+
 \paragraph{{localhost}} (так называемый, <<локальный хост>>, по смыслу <<этот компьютер>>) -- стандартное, официально зарезервированное доменное имя для \emph{частых} (или что то же самое \emph{локальных}) IP-адресов\footnote{Уникальный сетевой адрес узла в компьютерной сети, построенной на базе стека протоколов TCP/IP} \emph{петлевого интерфейса}\footnote{Обычно используется термин \emph{loopback}, который описывает методы или процедуры маршрутизации электронных сигналов, цифровых потоков данных, или других движущихся сущностей от их источника и обратно к тому же источнику без специальной обработки или модификации} (диапазон \texttt{127.0.0.1} -- \texttt{127.255.255.255}). Использование IP-адреса \texttt{127.0.0.1} позволяет устанавливать соединение и передавать информацию для программ-серверов, работающих на том же компьютере, что и программа-клиент. Примером может быть запущенный на компьютере веб-сервер приложений, обращение к которому выполняется с этого же компьютера для веб-разработки на данном компьютере без необходимости выкладывать веб-программу в сеть Интернет, пока ее разработка не закончена. Традиционно IP-адресу \texttt{127.0.0.1} однозначно сопоставляется имя хоста \texttt{localhost}.
 
 \paragraph{{порт}} целое неотрицательное число, записываемое в заголовках \emph{протоколов транспортного уровня} модели OSI (TCP, UDP, SCTP, DCCP). Используется для определения процесса-получателя пакета в пределах одного хоста (локального компьютера).
+
+\subsection{Высокоуровневая концепция}
+
+На одной физической машине  может находится несколько виртуальных машин (например, ОС Windows, ОС Linux и OC MacOS X), которые не будут знать ничего друг о друге (\pic{fig:containervsvm}). На этих виртуальных машинах, разумеется, могут быть установлены различные приложения, специфичные для конкретной операционной системы и т.д. Но каждая такая виртуальная машина не знает, что она виртуальная.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.45]{figures/container_vs_VM.png}
+	\caption{ Сравнение архитектуры docker-контейнеров и виртуальных машин }\label{fig:containervsvm}
+\end{figure}
+
+В случае с Docker внутри одного контейнера может существовать несколько приложений, которые взаимодействуют с одной операционной системой (ОС физической машины).
+
+Внутри контейнера может быть:
+\begin{itemize}
+	\item Приложение (Java/Ruby/Go etc.),
+	
+	\item Библиотеки (libxml, wkhtmltopdf etc.),
+	
+	\item Сервисы (PostgeSQL, Redis etc.),
+	
+	\item Утилиты (sbt, ant, gems, eggs etc.),
+	
+	\item Фреймворки (jre, ruby etc.)
+\end{itemize}
+
+В разных контейнерах могут стоять различные версии перечисленных объектов.
+
+Docker состоит из Daemon, Client и Registry. \emph{Docker-демон} запускается на машине (локальная машина, сервер или что-то еще), на которой планируется запускать контейнеры. Также предоставляет API и управляет docker-объектами (Dockerfile, ...).
+
+\emph{Docker-клиент} принимает команды пользователя и общается по API с docker-демоном.
+
+В сущности Docker-pipeline представляет собой следующую цепочку:
+\begin{itemize}
+	\item На базе файла \texttt{Dockerfile} собирается \emph{образ} с помощью \texttt{docker build} (на локальной машине),
+	
+	\item На базе образа запускается \emph{контейнер} с помощью \texttt{docker run}.
+\end{itemize}
+
+Пример Dockerfile
+\begin{lstlisting}[
+style = bash,
+numbers = none	
+]
+FROM python:3.7.2-alpine3.8
+LABEL maintainer="jeffmshale@gmail.com"
+ENV ADMIN="jeff"
+
+RUN apk update && apk upgrade && apk add bash # форма оболочки
+
+COPY . ./app
+
+ADD https://raw.githubusercontent.com/discdiver/pachy-vid/master/sample_vids/vid1.mp4 \
+/my_app_directory
+
+RUN ["mkdir", "/a_directory"] # JSON-форма
+
+CMD ["python", "./my_script.py"]
+\end{lstlisting}
+
+\texttt{FROM}: в роли базового образа выступает официальный Python-образ с тегом 3.7.2-alpine3.8. 
+
+\texttt{LABEL}: добавляет метаданные к образу, предоставляет контактную информацию. Она не замедляет процесс запуска и не занимает много места, наоборот, обеспечивает образ полезной информацией.
+
+\texttt{ENV}: создает переменную окружения, которая становится доступной во время запуска контейнера. 
+
+\texttt{RUN}: запускает заданную инструкцию внутри контейнера. Docker фиксирует состояние образа после каждой инструкции \texttt{RUN}. Чаще всего используется для установки нужных пакетов внутрь контейнера. \texttt{RUN} и ее родственные конструкции (\texttt{CMD}, \texttt{ENTRYPOINT}) -- могут быть как в форме оболочки, так и в JSON-форме. Во втором случае используют JSON-синтаксис 
+\begin{lstlisting}[
+style = bash,
+numbers = none	
+]
+RUN ["my_executable", "my_first_param1", "my_second_param2"]|
+\end{lstlisting}
+
+А в примере выше использовалась форма оболочки 
+\begin{lstlisting}[
+style = bash,
+numbers = none	
+]
+RUN apk update && apk upgrade && apk add bash
+\end{lstlisting}
+
+\texttt{COPY}: инструкция \verb|COPY . ./app| говорит Docker'у, что нужно скопировать файлы и папки из вашей локальной сборки в рабочую директорию образа. \texttt{COPY} создаст все нужные папки, если они осутствуют.
+
+\texttt{ADD}: делает то же самое, что и \texttt{COPY}, но с двумя отличиями. \texttt{ADD} может загружать файл по URL, а также извлекать локальные tar-файлы.
+
+В примере выше \texttt{ADD} копировала файлы по URL внутрь директории контейнера. Но официальной документации не рекомендуется использовать \texttt{ADD}. Однако, в общем случае лучше воспользоваться более простой инструкцией \texttt{COPY} для копирования файлов и каталогов в локальном контексте создания или инструкцией \texttt{RUN} с запуском \texttt{curl} или \texttt{wget} для загрузки удаленных ресурсов.
+
+\texttt{CMD}: инструкция для запуска чего-либо во время запуска самого контейнера, то есть инструкция запускается во время инициализации контейнера. По ходу сборки она не фиксирует никакого результата. В примере выше во время сборки запускался сценарий \verb|my_script.py|. Если была определена инструкция \texttt{ENTRYPOINT}, то заданная здесь инструкция будет интерпретироваться как аргумент для \texttt{ENTRYPOINT}. Инструкция \texttt{CMD} замещается любыми аргументами, указанными в команде \texttt{docker run} после имени образа. В действительности выполняется только самая последняя инструкция \texttt{CMD}, а все предыдущие инструкции \texttt{CMD} будут отменены.
+
+\texttt{WORKDIR}: меняет текущую рабочую директорию для инструций: \texttt{COPY}, \texttt{ADD}, \texttt{RUN} и \texttt{ENTRYPOINT}. Предпочтительно задавать абсолютный путь. \texttt{WORKDIR} автоматически создает директорию, если ее еще нет. Можно использовать несколько \texttt{WORKDIR}-инструкций.
+
+\texttt{ARG}: определяет переменную для передачи из командной строки в образ. Для \texttt{ARG} можно указать значение по умолчанию \texttt{ARG my\_var=my\_default\_value}. Например
+\begin{lstlisting}[
+style = bash,
+numbers = none	
+]
+...
+ARG my_var=my_default_value
+
+ENTRYPOINT ["python", "./app/my_script.py", "my_var"] # будет прочитано значение my_var
+...
+\end{lstlisting}
+
+В отличие от \texttt{ENV}-переменных \texttt{ARG}-переменные не доступны для запущенных контейнеров. Другими словами, нельзя напрямую установить значение переменных \texttt{ENV} при запуске сборки образа с помощью \texttt{docker build}. Но можно использовать \texttt{ARG} для передачи значений в инструкции \texttt{ENV}.
+
+Например \url{https://vsupalov.com/articles/}
+\begin{lstlisting}[
+title = {\sffamily Dockerfile},
+style = bash,
+numbers = none	
+]
+...
+# переменная buildtime_variable со значением по умолчанию
+ARG buildtime_variable=default_value # существует только для передачи значения в переменную окружения
+
+ENV env_var_name=$buildtime_variable
+...
+\end{lstlisting}
+
+Теперь при запуске сборки образа можно переопределять значение переменной \verb|buildtime_variable| <<на лету>>
+\begin{lstlisting}[
+style = bash,
+numbers = none	
+]
+docker build --build-arg buildtime_variable=a_value ...
+\end{lstlisting}
+
+То есть можно изменять значение переменной \verb|buildtime_variable| без необходимости вносить изменения в \texttt{Dockerfile}.
+
+\texttt{ENTRYPOINT}: также позволяет задавать дефолтные команды и аргументы во время запуска контейнера. Аргументы командной строки, передаваемые \texttt{docker run my\_image\_name}, добавляются к аргументам инструкции \texttt{ENTRYPOINT}. Например,
+\begin{lstlisting}[
+style = bash,
+numbers = none	
+]
+docker run my_image_name bash
+\end{lstlisting}
+добавляет аргумент \texttt{bash} в конец, ко всем другим аргументам \texttt{ENTRYPOINT}.
+
+\texttt{Dockerfile} должен обязательно содержать либо \texttt{CMD}-инструкцию, либо \texttt{ENTRYPOINT}-инструкцию. В официальной документации есть несколько советов, которые помогут сделать выбор между \texttt{CMD} и \texttt{ENTRYPOINT}
+\begin{itemize}
+	\item Если вам нужно запускать одну и ту же команду несколько раз, выбирайте \texttt{ENTRYPOINT},
+	
+	\item Используйте \texttt{ENTRYPOINT}, когда ваш контейнер выступает в роли исполняющей программы,
+	
+	\item При наличии дополнительных дефолтных аргументов, которые могут быть изменены через командную строку, лучше подойдет \texttt{CMD}.
+\end{itemize}
+
+\texttt{EXPOSE}: показывает какой порт пробрасывать из контейнера. Используйте команду \texttt{docker run} с флагом \verb|-p| для пробрасывания и сопоставления нескольких портов во время запуска. Флаг в верхнем регистре \verb|-P| будет пробрасывать все открытые порты.
+
+\texttt{VOLUME}: определяет, где контейнер будет хранить постоянные данные и получать к ним доступ.
 
 \subsection{Установка}
 
@@ -48,6 +203,8 @@ conda install -c conda-forge docker-py
 	
 	\item для \texttt{Windows}\footnote{Поддерживается даже \texttt{Windows 7}}: \url{https://docs.docker.com/toolbox/toolbox_install_windows/}; после установки \texttt{Docker Toolbox} останется только запустить \texttt{Docker Quick Start Terminal}.
 \end{itemize}
+
+То есть на операционных системах Windows и MacOS X для того, чтобы можно было работать с Docker, требуется поднять виртуальную машину Linux VM, внутри которой будут существовать docker-демон и контейнеры.
 
 \subsection{Анализ manifest-файлов Docker}
 
@@ -1023,6 +1180,10 @@ numbers = none
 ]
 docker rmi $(docker images | sed '1d' | awk -F ' ' '{ print $3 }')
 \end{lstlisting}
+
+\section{Docker для ML}
+
+Данных не должно быть в docker-образе. Данные должны подгружаться при запуске контейнера. Docker-образ можно запускать с помощью Airflow. Оркестратор Airflow скачает docker-образ и запустит его. Можно настроить запуск по расписанию с помощью Kubernetes.
 
 
 % Источники в "Газовой промышленности" нумеруются по мере упоминания 
