--- a/style_packages/podvoyskiy_article_extended.sty
+++ b/style_packages/podvoyskiy_article_extended.sty
@@ -321,5 +321,6 @@
 \newcommand{\abs}[1]{\lvert#1\rvert}
 \newcommand{\snpr}{\sigma^\text{н}_\text{пр}}
 \newcommand{\snh}{\sigma^\text{н}_\text{кц}}
+\newcommand{\pic}[1]{рис.~\ref{#1}}
 
 \columnseprule=0.4pt  % рисует вертикальную черту между колонками при наборе в две колонке \documentclass[twocolumn]{article}
