Updated .gitignore file and added note about docker-compose

--- a/cheat_sheet_docker.tex
+++ b/cheat_sheet_docker.tex
@@ -437,6 +437,8 @@ $ docker-compose up -d
 
 \subsection{Порядок работы с docker-compose}
 
+Docker-compose придумали для того, чтобы создавать себе на локальном компьютере (или окружении для \emph{тестов}) \emph{эмуляцию} продакшн среды. В действительности речь идет о распределенном приложении, которое будет работать на нескольких машинах, но для того чтобы посмотреть связку этих раздельных блоков на локальной машине (например, для проведения интеграционных тестов) можно использовать docker-compose.
+
 Обычный порядок работы начинается с выполнения команды для запуска приложения
 \begin{lstlisting}[
 style = bash,
